fix: Alignment for feats on index page

--- a/themes/quasar/source/css/index.styl
+++ b/themes/quasar/source/css/index.styl
@@ -82,7 +82,7 @@ html, body
         font-size 1.4em
         margin-bottom 4em
     .feats
-        margin 4em 0
+        margin 4em auto
     .feat
         box-sizing border-box
         display inline-block
